--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.10",
+    "framer-motion": "^7.6.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
